--- a/toylibrary/pythonApp/templates/index.html
+++ b/toylibrary/pythonApp/templates/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="main_content">
-            <section id="index-background" style="background: black url('{{ url_for('static', filename='images/index_background.jpg') }}')">
+            <section id="index-background" style="background: black url('{{ url_for('static', filename='images/index_background.jpeg') }}')">
                 <div class="intro-block">
                     <img src="{{ url_for('static', filename='images/toylibrary_logo.png') }}" alt="Toy Library Logo">
                     <h1><strong>Cromwell Toy Library</strong></h1>
