--- a/toylibrary/pythonApp/static/css/pythonStyle.css
+++ b/toylibrary/pythonApp/static/css/pythonStyle.css
@@ -240,15 +240,14 @@ BODY ELEMENTS
 
 
 #index-background {
-    background: black url(images/index_background.jpg) no-repeat center;
-    background-size: cover; /* This ensures the image covers the container */
-    background-position: center top; /* Adjust to position the image as needed */
-    height: 900px; /* Container height */
-    max-height: 580px; /* Maximum height */
-    padding-top: 365px; /* Adjust padding as needed */
-    overflow: hidden; /* Ensures any overflow is hidden */
-    position: relative; /* Ensures proper positioning context */
-    display: grid;
+  background: black url(images/index_background.jpeg) no-repeat center center; /* Center the image */
+  background-size: cover; /* This ensures the image covers the container */
+  height: 900px; /* Container height */
+  max-height: 580px; /* Maximum height */
+  padding-top: 365px; /* Adjust padding as needed */
+  overflow: hidden; /* Ensures any overflow is hidden */
+  position: relative; /* Ensures proper positioning context */
+  display: grid;
 }
 
 .index-blurb {
@@ -441,10 +440,39 @@ BODY ELEMENTS
   margin-right: auto;
   max-width: fit-content;
   padding-top: 35px;
+  text-align: center;
 }
 
 h1{
   text-align: center;
+}
+
+.dashboard-container {
+  text-align: center;
+  margin: 20px;
+}
+.button-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn {
+  display: block;
+  margin: 10px;
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+.btn:hover {
+  background-color: #0056b3;
+}
+
+p {
+  text-align: center;
+  margin-top: 65px;
 }
 
 
@@ -462,11 +490,9 @@ footer {
 	color:#fff;
 	overflow: hidden;
 	/* Set the navbar to fixed position */
-	top: 0;
-	/* Position the navbar at the top of the page */
+
 }
 
 footer p {
-	padding-top: 30px;
-	padding-bottom: 30px;
+	padding-bottom: 35px;
 }
