--- a/toylibrary/pythonApp/templates/contact.html
+++ b/toylibrary/pythonApp/templates/contact.html
@@ -63,8 +63,8 @@
             </footer>
          </div>
 
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-        <script src="index.js"></script>
+         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+         <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
     </body>
 </html>
