--- a/toylibrary/pythonApp/templates/delete_item.html
+++ b/toylibrary/pythonApp/templates/delete_item.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div style="display: flex; align-items: center; justify-content: center; padding: 10px;">
+    <a href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
+    <h1 style="margin-left: 10px;">Delete Item</h1>
+</div>
 <div class="table_styling">
     <h3>Delete an Item</h3>
     <form method="post" class="w3-container">
