--- a/toylibrary/pythonApp/templates/oneyear_members.html
+++ b/toylibrary/pythonApp/templates/oneyear_members.html
@@ -1,16 +1,16 @@
-<!-- This is how we extend the base layout so we don;t need to do it again! -->
 {% extends 'base.html' %}
-<!-- Now i can fill out the blocks that I want -->
 {% block content %}
+<div style="display: flex; align-items: center; justify-content: center; padding: 10px;">
+    <a href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
+    <h1 style="margin-left: 10px;">One Year Members</h1>
+</div>
 <div class="table_styling">
-    <h1>One Year Members</h1>
-    <table style="text-align:center;">
+    <table>
         <tr>
             <th width="200">NAME</th>
             <th width="200">MEMBERSHIP PERIOD</th>
         </tr>
-        <!-- iterate through the results use the symbols to show "code" in the template -->
-        {% for item in results%} 
+        {% for item in results %} 
         <tr>
             <td>{{ item[0] }}</td>
             <td>{{ item[1] }}</td>
@@ -20,8 +20,8 @@
             <td>{{ item[5] }}</td>
             <td>{{ item[6] }}</td>
         </tr>
-        <!-- must have an "endfor"! dont forget -->
         {% endfor %}
     </table>
 </div>
+
 {% endblock %}
