--- a/toylibrary/pythonApp/templates/search_rental.html
+++ b/toylibrary/pythonApp/templates/search_rental.html
@@ -2,9 +2,14 @@
 
 </nav>
 </div>
+
 <div class="table_styling">
 
   {% block content %}
+  <div style="display: flex; align-items: center; justify-content: center; padding: 10px;">
+    <a href="{{ url_for('admin_dashboard') }}" class="btn">Back</a>
+    <h1 style="margin-left: 10px;">Search Rental</h1>
+  </div>
   <h3>Search for Rental</h3>
   <form method="post" class="w3-container">
     <br>
